--- a/blocks/places.css
+++ b/blocks/places.css
@@ -20,6 +20,7 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 .place-card__image {
@@ -47,18 +48,35 @@
 }
 
 .button_type_like {
+  background-image: url("../images/like-button.png");
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-position: center;
   width: 21px;
   height: 19px;
-  background-color: transparent;
   border: none;
   padding: 0;
   cursor: pointer;
 }
 
-.button_type_like .button__icon {
-  display: block;
-  max-width: 100%;
-  height: auto;
+.button_type_like:hover {
+  opacity: 0.5;
+}
+
+.button_type_like-active {
+  background-image: url("../images/like-button-active.png");
+}
+
+.button_type_delete {
+  background-image: url("../images/trash.svg");
+  background-color: transparent;
+  width: 18px;
+  height: 19px;
+  border: none;
+  cursor: pointer;
+  position: absolute;
+  top: 20px;
+  right: 20px;
 }
 
 @media screen and (max-width: 600px) {
