--- a/blocks/places.css
+++ b/blocks/places.css
@@ -68,7 +68,7 @@
 }
 
 .button_type_delete {
-  background-image: url("../images/trash.svg");
+  background-image: url("../images/Trash.svg");
   background-color: transparent;
   width: 18px;
   height: 19px;
