--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -192,3 +192,33 @@
     right: 20px;
   }
 }
+
+.popup__input_type_error {
+  border-bottom: 1px solid #ff0000;
+}
+
+.popup__error {
+  font-size: 12px;
+  line-height: 15px;
+  color: #ff0000;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  padding-top: 5px;
+}
+
+.popup__error_visible {
+  visibility: visible;
+  opacity: 1;
+}
+
+.popup__button_disabled {
+  background-color: transparent;
+  color: rgba(0, 0, 0, 0.2);
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  cursor: default;
+  pointer-events: none;
+}
