--- a/src/blocks/places.css
+++ b/src/blocks/places.css
@@ -49,7 +49,7 @@
 }
 
 .button_type_like {
-  background-image: url("../images/like-button.png");
+  background-image: url("../../images/like-button.png");
   background-color: transparent;
   background-repeat: no-repeat;
   background-position: center;
@@ -65,11 +65,10 @@
 }
 
 .button_type_like-active {
-  background-image: url("../images/like-button-active.png");
+  background-image: url("../../images/like-button-active.png");
 }
-
 .button_type_delete {
-  background-image: url("../images/Trash.svg");
+  background-image: url("../../images/Trash.svg");
   background-color: transparent;
   width: 18px;
   height: 19px;
