--- a/src/blocks/popup.css
+++ b/src/blocks/popup.css
@@ -35,7 +35,7 @@
   position: absolute;
   top: -40px;
   right: -40px;
-  background-image: url("../images/close-button.png");
+  background-image: url("../../images/close-button.png");
   background-repeat: no-repeat;
   background-position: center;
   background-color: transparent;
@@ -154,7 +154,7 @@
 }
 
 .popup_type_image .button_type_close {
-  background-image: url("../images/close-button.png");
+  background-image: url("../../images/close-button.png");
   background-repeat: no-repeat;
   background-position: center;
   position: absolute;
